# UAV-ART

./: .gitignore  README.md  drawVehicle.m  vehicle_animation.slx.r2014a
vision/Fiduciary_Markers/: CMakeCache.txt  CMakeLists.txt  Camera_Distortion.txt  Camera_Distortion_iPhone.txt  Camera_Matrix.txt  Camera_Matrix_iPhone.txt  Makefile  README.md  TODO LIST.txt  cmake_install.cmake  example_python.c  example_python.py  example_python.pyx  main2  main2.pyx  main3  main3.cpp  markerC_Final3.py  markerC_detector  markerC_detector.cpp  markerC_detector.py  markerC_pipe.py  out1  out2  setup.py  subC.c  subCpp  subCpp.cpp  subP.py  teste  teste.cpp  teste.py  testing.py  testing_cython.py  word
vision/Fiduciary_Markers/Debug/Fiducial_Markers.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Fiducial_Markers.lastbuildstate
vision/Fiduciary_Markers/Images/New_Images/: C_fast_short.MOV
vision/Fiduciary_Markers/Old_Aruco_Code/: Pose_estimation_Aruco.py  Pose_estimation_Aruco_Rec.py  aruco.py  detect_aruco.py  generate_aruco.py
vision/Fiduciary_Markers/Old_Aruco_Code/Old_Markers_Code/: markerA.py  markerB.py  markerC_Final.py  markerC_new_test.py  markerD.py  markerG.py  (+9 more)
vision/Fiduciary_Markers/Old_Code/: aruco_Final.py
vision/Fiduciary_Markers/VisualStudio/: Fiducial_Markers.sln  Fiducial_Markers.vcxproj  Fiducial_Markers.vcxproj.filters
vision/Fiduciary_Markers/camera_calibration-master-2/: calibration.yaml  camera_calibration.py  rename.py
vision/Fiduciary_Markers/pyboostcvconverter/: LICENSE  pyboost_cv3_converter.cpp  pyboostcvconverter.hpp
(+1738 files in other folders)
